Add new specialist for DOS3
Adds required questions and manifest entries for data architects,
engineers and scientists.

--- a/frameworks/digital-outcomes-and-specialists-3/manifests/edit_service.yml
+++ b/frameworks/digital-outcomes-and-specialists-3/manifests/edit_service.yml
@@ -43,6 +43,9 @@
     - communicationsManager
     - contentDesigner
     - securityConsultant
+    - dataArchitect
+    - dataEngineer
+    - dataScientist
     - deliveryManager
     - designer
     - developer
