--- a/frameworks/digital-outcomes-and-specialists-3/manifests/edit_submission.yml
+++ b/frameworks/digital-outcomes-and-specialists-3/manifests/edit_submission.yml
@@ -59,6 +59,9 @@
     - communicationsManager
     - contentDesigner
     - securityConsultant
+    - dataArchitect
+    - dataEngineer
+    - dataScientist
     - deliveryManager
     - designer
     - developer
