--- a/frameworks/digital-outcomes-and-specialists-3/manifests/edit_service_as_admin.yml
+++ b/frameworks/digital-outcomes-and-specialists-3/manifests/edit_service_as_admin.yml
@@ -44,6 +44,9 @@
     - communicationsManager
     - contentDesigner
     - securityConsultant
+    - dataArchitect
+    - dataEngineer
+    - dataScientist
     - deliveryManager
     - designer
     - developer
