--- a/frameworks/digital-outcomes-and-specialists-3/questions/declaration/civilServiceValues.yml
+++ b/frameworks/digital-outcomes-and-specialists-3/questions/declaration/civilServiceValues.yml
@@ -1,6 +1,6 @@
 name: Civil Service values
 question: >
-  Please confirm you will support the [Civil Service values](https://www.gov.uk/government/publications/civil-service-code/the-civil-service-code) and, if asked, provide evidence of how you do it.
+  Please confirm you will support the <a href="https://www.gov.uk/government/publications/civil-service-code/the-civil-service-code" target="_blank" rel="noopener noreferrer">Civil Service values (link opens in a new tab)</a> and, if asked, provide evidence of how you do it.
 type: boolean
 assessment:
   passIfIn:
