--- a/frameworks/digital-outcomes-and-specialists-3/questions/declaration/safeguardPersonalData.yml
+++ b/frameworks/digital-outcomes-and-specialists-3/questions/declaration/safeguardPersonalData.yml
@@ -1,6 +1,6 @@
 name: Safeguarding personal data
 question: >
-  Do you agree to protect personal data according to the government guidance on [data protection and your business](https://www.gov.uk/data-protection-your-business)?
+  Do you agree to protect personal data according to the government guidance on <a href="https://www.gov.uk/data-protection-your-business" target="_blank" rel="noopener noreferrer">data protection and your business (link opens in a new tab)</a>?
 type: boolean
 hint: If you provide access to user research studios, for example, please confirm that you don’t share research videos with third parties.
 assessment:
