--- a/frameworks/digital-outcomes-and-specialists-3/messages/homepage-sidebar.yml
+++ b/frameworks/digital-outcomes-and-specialists-3/messages/homepage-sidebar.yml
@@ -8,7 +8,7 @@ open:
   heading: 'Digital Outcomes and Specialists&nbsp;3 is open for applications'
   messages:
     - 'You need an account to apply.'
-    - 'The application deadline is 5pm&nbsp;GMT, 32 February 2525.'
+    - 'The application deadline is 5pm&nbsp;BST, 22 August 2018.'
 
 pending:
   heading: 'Digital Outcomes and Specialists&nbsp;3 is closed for applications'
