--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,8 +1,10 @@
 -r requirements.txt
+ezodf
 flake8==3.5.0
 flake8-per-file-ignores==0.4.0
 hypothesis==1.18.1
 jsonschema==2.3.0
+lxml
 mock==2.0.0
 pytest==3.2.5
 PyYAML==3.11
