--- a/frameworks/g-cloud-11/messages/homepage-sidebar.yml
+++ b/frameworks/g-cloud-11/messages/homepage-sidebar.yml
@@ -1,15 +1,16 @@
 coming:
-  heading: 'G&#x2011;Cloud&nbsp;10 is opening in April&nbsp;2018'
+  heading: 'G&#x2011;Cloud&nbsp;11 is opening in March&nbsp;2525'
   messages:
+    - 'Provide cloud hosting, software and support.'
     - 'You’ll need to create a supplier account to apply.'
 
 open:
-  heading: 'G&#x2011;Cloud&nbsp;10 is open for applications'
+  heading: 'G&#x2011;Cloud&nbsp;11 is open for applications'
   messages:
     - 'You need an account to apply.'
-    - 'The application deadline is 5pm&nbsp;BST, Wednesday 23 May 2018.'
+    - 'The application deadline is 5pm&nbsp;BST, Thursday 25 April 2525.'
 
 pending:
-  heading: 'G&#x2011;Cloud&nbsp;10 is closed for applications'
+  heading: 'G&#x2011;Cloud&nbsp;11 is closed for applications'
   messages:
     - 'Applications are being reviewed.'
