--- a/frameworks/g-cloud-11/manifests/declaration.yml
+++ b/frameworks/g-cloud-11/manifests/declaration.yml
@@ -173,3 +173,11 @@
     - primaryContactEmail
     - contactNameContractNotice
     - contactEmailContractNotice
+
+-
+  name: Modern slavery
+  slug: modern-slavery
+  editable: True
+  prefill: False
+  questions:
+    - multiqModernSlavery
