--- a/frameworks/g-cloud-11/questions/declaration/fraudAndTheft.yml
+++ b/frameworks/g-cloud-11/questions/declaration/fraudAndTheft.yml
@@ -1,6 +1,6 @@
 name: Fraud convictions
 question: >
-  Please confirm whether, within the past 5 years, anyone who represents, supervises or has control in your organisation or a partner or parent organisation has been convicted of any offence that relates to fraud affecting the European Communities’ financial interests as defined by article 1 of the Convention on the Protection of the Financial Interests of the European Communities, including:
+  Has anyone who represents, supervises or has control in your organisation (or a partner or parent organisation) been convicted - within the last 5 years - of any offence that relates to fraud affecting the European Communities’ financial interests as defined by article 1 of the Convention on the Protection of the Financial Interests of the European Communities, including:
 
     - the common law offence of cheating the Revenue (HMRC)
     - the common law offence of conspiracy to defraud
