--- a/frameworks/g-cloud-11/questions/declaration/terrorism.yml
+++ b/frameworks/g-cloud-11/questions/declaration/terrorism.yml
@@ -1,6 +1,6 @@
 name: Terrorism convictions
 question: >
-  Please confirm whether, within the past 5 years, anyone who represents, supervises or has control in your organisation or a partner or parent organisation has been convicted of any offence listed in:
+  In the last 5 years, has anyone who represents, supervises or has control in your organisation (or a partner or parent organisation) been convicted of any offence listed in:
 
     - section 41 of the Counter Terrorism Act 2008
     - schedule 2 of the Counter Terrorism Act 2008 where the court has determined that there is a terrorist connection
