Add DUNS Company reg question

--- a/frameworks/g-cloud-11/manifests/declaration.yml
+++ b/frameworks/g-cloud-11/manifests/declaration.yml
@@ -156,6 +156,7 @@
     - informationChanges
     - accuratelyDescribed
     - proofOfClaims
+    - dunsNumberCompanyRegistrationNumber
 
 -
   name: How you’ll deliver your services
