Add accessibility documentation questions

--- a/frameworks/g-cloud-11/questions/services/multiqDocumentation.yml
+++ b/frameworks/g-cloud-11/questions/services/multiqDocumentation.yml
@@ -12,3 +12,5 @@ questions:
   - documentation
   - documentationFormats
   - documentationFormatsOther
+  - documentationAccessibility
+  - documentationAccessibilityDescription
