--- a/frameworks/g-cloud-11/questions/services/publicSectorNetworksTypes.yml
+++ b/frameworks/g-cloud-11/questions/services/publicSectorNetworksTypes.yml
@@ -16,12 +16,14 @@ options:
     value: psn
   - label: Police National Network (PNN)
     value: pnn
-  - label: New NHS Network (N3)
+  - label: NHS Network (N3)
     value: n3
   - label: Joint Academic Network (JANET)
     value: janet
   - label: Scottish Wide Area Network (SWAN)
     value: swan
+  - label: Health and Social Care Network (HSCN)
+    value: hscn
   - label: Other
     value: other
     filter_ignore: true 
