Energy efficiency description followup

--- a/frameworks/g-cloud-11/manifests/edit_submission.yml
+++ b/frameworks/g-cloud-11/manifests/edit_submission.yml
@@ -245,7 +245,7 @@
   editable: false
   edit_questions: true
   questions:
-    - energyEfficientDatacentres
+    - multiqEnergyEfficiency
 
 - name: Pricing
   editable: false
