--- a/frameworks/g-cloud-11/questions/services/energyEfficientDatacentres.yml
+++ b/frameworks/g-cloud-11/questions/services/energyEfficientDatacentres.yml
@@ -7,6 +7,9 @@ depends:
   - "on": lot
     being:
       - cloud-hosting
+followup:
+  energyEfficientDatacentresDescription:
+    - true
 
 type: boolean
 
