Service interface questions

--- a/frameworks/g-cloud-11/questions/services/multiqServiceInterface.yml
+++ b/frameworks/g-cloud-11/questions/services/multiqServiceInterface.yml
@@ -8,6 +8,8 @@ depends:
 
 type: multiquestion
 questions:
+  - serviceInterface
+  - serviceInterfaceDescription
   - serviceInterfaceAccessibility
   - serviceInterfaceAccessibilityDescription
   - serviceInterfaceTesting
