Modern Slavery wording updates

--- a/frameworks/g-cloud-11/questions/declaration/mitigatingFactors3.yml
+++ b/frameworks/g-cloud-11/questions/declaration/mitigatingFactors3.yml
@@ -1,7 +1,6 @@
 name: Mitigating factors for Modern Slavery reporting requirements
 question: >
-  If your organisation does not comply with the annual reporting requirements, please provide details of
-  any mitigating factors that you think should be taken into consideration.
+  If your organisation does not meet the requirements, please explain why.
 type: textbox_large
 
 hidden: true
