--- a/frameworks/g-cloud-11/questions/declaration/modernSlaveryStatementOptional.yml
+++ b/frameworks/g-cloud-11/questions/declaration/modernSlaveryStatementOptional.yml
@@ -2,7 +2,7 @@ name: Modern slavery statement optional
 question: >
   You don’t need to publish a slavery and human trafficking statement to meet the modern slavery requirements for G-Cloud 11.
 question_advice: >
-  You can choose to upload a statement. Read the Home Office guidance for information about [how to write a statement and what information it must include](/government/publications/transparency-in-supply-chains-a-practical-guide).
+  You can choose to upload a statement. Read the Home Office guidance for information about <a href="https://www.gov.uk/government/publications/transparency-in-supply-chains-a-practical-guide" target="_blank" rel="noopener noreferrer">how to write a statement and what information it must include (link opens in a new tab)</a>.
 hint: >
   Use an Open Document Format (ODF) or PDF/A (eg .pdf, .odt). (Maximum file size 5MB.)
 
