--- a/frameworks/g-cloud-11/questions/services/managementAccessAuthentication.yml
+++ b/frameworks/g-cloud-11/questions/services/managementAccessAuthentication.yml
@@ -8,7 +8,7 @@ depends:
       - cloud-software
 followup:
   managementAccessAuthenticationDescription:
-    - true
+    - other
 
 type: checkboxes
 options:
