Update energy efficiency questions in admin/display manifests

--- a/frameworks/g-cloud-11/manifests/display_service.yml
+++ b/frameworks/g-cloud-11/manifests/display_service.yml
@@ -261,6 +261,7 @@
 - name: Energy efficiency
   questions:
     - energyEfficientDatacentres
+    - energyEfficientDatacentresDescription
 
 - name: Pricing
   questions:
