--- a/frameworks/g-cloud-11/manifests/edit_service_as_admin.yml
+++ b/frameworks/g-cloud-11/manifests/edit_service_as_admin.yml
@@ -210,7 +210,7 @@
 - name: Energy efficiency
   editable: true
   questions:
-    - energyEfficientDatacentres
+    - multiqEnergyEfficiency
 
 - name: Pricing
   editable: true
