--- a/frameworks/digital-outcomes-and-specialists-3/questions/brief-responses/respondToEmailAddress.yml
+++ b/frameworks/digital-outcomes-and-specialists-3/questions/brief-responses/respondToEmailAddress.yml
@@ -2,6 +2,7 @@ name: Email address
 question: Email address the buyer should use to contact you
 question_advice: All communication about your application will be sent to this address.
 type: text
+hint: You can add more than one email address. Use a comma between each email address.
 limits:
   format: email
 
