--- a/frameworks/g-cloud-11/questions/declaration/employersInsurance.yml
+++ b/frameworks/g-cloud-11/questions/declaration/employersInsurance.yml
@@ -7,10 +7,10 @@ hint: >
   members. You must answer ‘Yes’ or ‘Not applicable’ to be eligible for consideration for the G-Cloud&nbsp;11 framework.
 type: radios
 options:
-  - label: "Yes – your organisation has, or will have in place, employer’s liability insurance of at least £5 million."
+  - label: "Yes – your organisation has, or will have in place, employer’s liability insurance of at least £5 million and you will provide certification before the framework is awarded."
   - label: "No - your organisation does not have, and will not have in place, employer’s liability insurance of at least £5 million before the framework is awarded."
   - label: "Not applicable - your organisation does not need employer’s liability insurance because your organisation employs only the owner or close family members."
 assessment:
   passIfIn:
-    - "Yes – your organisation has, or will have in place, employer’s liability insurance of at least £5 million."
+    - "Yes – your organisation has, or will have in place, employer’s liability insurance of at least £5 million and you will provide certification before the framework is awarded."
     - "Not applicable - your organisation does not need employer’s liability insurance because your organisation employs only the owner or close family members."
