Update unfairCompetition wording to reverse the meaning
The 'pass' answer is now 'False' instead of 'True'. This question
is not prefilled from a previous declaration as it is in the
'What it means to be on Digital Outcomes and Specialists 4' section.

--- a/frameworks/digital-outcomes-and-specialists-4/questions/declaration/unfairCompetition.yml
+++ b/frameworks/digital-outcomes-and-specialists-4/questions/declaration/unfairCompetition.yml
@@ -1,6 +1,6 @@
 name: No unfair access to information
 question: >
-  Please confirm that no party has:
+  Has any party involved in the application done any of the following:
 
     - colluded to set prices with other suppliers or buyers
     - entered into any arrangement with another person so that person refrains from submitting an application
@@ -11,4 +11,4 @@ question: >
 type: boolean
 assessment:
   passIfIn:
-    - True
+    - False
