--- a/frameworks/digital-outcomes-and-specialists-4/questions/declaration/conspiracy.yml
+++ b/frameworks/digital-outcomes-and-specialists-4/questions/declaration/conspiracy.yml
@@ -1,6 +1,6 @@
 name: Organised crime or conspiracy convictions
 question: >
-  Please confirm whether, within the past 5 years, anyone who represents, supervises or has control in your organisation or a partner or parent organisation has been convicted of:
+  In the last 5 years, has anyone who represents, supervises or has control in your organisation (or a partner or parent organisation) been convicted of:
 
     - a participation offence as defined by section 45 of the Serious Crime Act 2015
     - conspiracy within the meaning of section 1 or 1A of the Criminal Law Act 1977 article
