--- a/frameworks/digital-outcomes-and-specialists-4/questions/declaration/corruptionBribery.yml
+++ b/frameworks/digital-outcomes-and-specialists-4/questions/declaration/corruptionBribery.yml
@@ -1,6 +1,6 @@
 name: Bribery or corruption convictions
 question: >
-  Please confirm whether, within the past 5 years, anyone who represents, supervises or has control in your organisation or a partner or parent organisation has been convicted of:
+  In the last 5 years, has anyone who represents, supervises or has control in your organisation (or a partner or parent organisation) been convicted of:
 
     - corruption within the meaning of section 1(2) of the Public Bodies Corrupt Practices Act 1889 or section 1 of the Prevention of Corruption Act 1906
     - the common law offence of bribery
