--- a/frameworks/digital-outcomes-and-specialists-4/questions/declaration/organisedCrime.yml
+++ b/frameworks/digital-outcomes-and-specialists-4/questions/declaration/organisedCrime.yml
@@ -1,6 +1,6 @@
 name: Organised crime convictions
 question: >
-  Please confirm whether, within the past 5 years, anyone who represents, supervises or has control in your organisation or a partner or parent organisation has been convicted of:
+  In the last 5 years, has anyone who represents, supervises or has control in your organisation (or a partner or parent organisation) been convicted of:
 
     - money laundering within the meaning of sections 340(11) and 415 of the Proceeds of Crime Act 2002
     - an offence in connection with the proceeds of criminal conduct within the meaning of section 93A, 93B or 93C of the Criminal Justice Act 1988 or article 45, 46 or 47 of the Proceeds of Crime (Northern Ireland) Order 1996
