--- a/frameworks/digital-outcomes-and-specialists-4/questions/declaration/confidentialInformation.yml
+++ b/frameworks/digital-outcomes-and-specialists-4/questions/declaration/confidentialInformation.yml
@@ -1,8 +1,6 @@
 name: Obtaining confidential information
 question: >
-  Please confirm whether, within the past 3 years, your organisation or any of your partner organisations has:
-
-    - obtained confidential information that may give you undue advantages in the procurement procedure
+  In the last 3 years, has your organisation (or any partner organisation) obtained confidential information that may give you undue advantages in the procurement procedure?
 type: boolean
 assessment:
   passIfIn:
