--- a/frameworks/digital-outcomes-and-specialists-4/questions/declaration/graveProfessionalMisconduct.yml
+++ b/frameworks/digital-outcomes-and-specialists-4/questions/declaration/graveProfessionalMisconduct.yml
@@ -1,8 +1,7 @@
 name: Professional misconduct
 question: >
-  Please confirm whether, within the past 3 years, your organisation or any of your partner organisations has:
+  In the last 3 years, has your organisation (or any partner organisation) been guilty of grave professional misconduct?
 
-    - been guilty of grave professional misconduct
 type: boolean
 assessment:
   passIfIn:
