--- a/frameworks/digital-outcomes-and-specialists-4/questions/declaration/seriousMisrepresentation.yml
+++ b/frameworks/digital-outcomes-and-specialists-4/questions/declaration/seriousMisrepresentation.yml
@@ -1,8 +1,6 @@
 name: Serious misrepresentation of information
 question: >
-  Please confirm whether, within the past 3 years, your organisation or any of your partner organisations has:
-
-    - been guilty of serious misrepresentation of the information required for the fulfilment of the selection criteria
+  In the last 3 years, has your organisation (or any partner organisation) been guilty of serious misrepresentation of the information required for the fulfilment of the selection criteria?
 type: boolean
 assessment:
   passIfIn:
