--- a/frameworks/digital-outcomes-and-specialists-4/questions/declaration/GAAR.yml
+++ b/frameworks/digital-outcomes-and-specialists-4/questions/declaration/GAAR.yml
@@ -1,6 +1,6 @@
 name: Why a tax return was incorrect
 question: >
-  Please confirm whether any of your organisation’s tax returns, submitted on or after 1 October 2012, have been found to be incorrect on or after 1 April 2013 because:
+  Have any tax returns submitted by your organisation on or after 1 October 2012 been found to be incorrect on or after 1 April 2013 for any of these reasons:
 
     - HMRC successfully challenged it under the General Anti-Abuse Rule (GAAR) or Halifax abuse principle
     - a tax authority (in a jurisdiction in which your organisation is established) successfully challenged it under any tax rules or legislation that have an effect equivalent or similar to the GAAR or Halifax abuse principle
