--- a/frameworks/digital-outcomes-and-specialists-4/questions/declaration/conflictOfInterest.yml
+++ b/frameworks/digital-outcomes-and-specialists-4/questions/declaration/conflictOfInterest.yml
@@ -1,8 +1,6 @@
 name: Conflict of interest
 question: >
-  Please confirm whether, within the past 3 years, your organisation or any of your partner organisations has:
-
-    - had a conflict of interest within the meaning of <a href="http://www.legislation.gov.uk/uksi/2015/102/regulation/24/made" target="_blank" rel="noopener noreferrer">Regulation 24 of the Public Contracts Regulations 2015 (link opens in a new tab)</a>
+  In the last 3 years, has your organisation (or any partner organisation) had a conflict of interest as defined in <a href="http://www.legislation.gov.uk/uksi/2015/102/regulation/24/made" target="_blank" rel="noopener noreferrer">Regulation 24 of the Public Contracts Regulations 2015 (link opens in a new tab)</a>?
 type: boolean
 assessment:
   passIfIn:
