--- a/frameworks/digital-outcomes-and-specialists-4/questions/declaration/distortingCompetition.yml
+++ b/frameworks/digital-outcomes-and-specialists-4/questions/declaration/distortingCompetition.yml
@@ -1,8 +1,6 @@
 name: Distorting competition with other economic operators
 question: >
-  Please confirm whether, within the past 3 years, your organisation or any of your partner organisations has:
-
-    - entered into agreements with other economic operators aimed at distorting competition
+  In the last 3 years, has your organisation (or any partner organisation) entered into agreements with other economic operators with the aim of distorting competition?
 type: boolean
 assessment:
   passIfIn:
