--- a/frameworks/digital-outcomes-and-specialists-4/questions/declaration/environmentalSocialLabourLaw.yml
+++ b/frameworks/digital-outcomes-and-specialists-4/questions/declaration/environmentalSocialLabourLaw.yml
@@ -1,8 +1,10 @@
 name: Violations of environmental, social or labour law
 question: >
-  Please confirm whether, within the past 3 years, your organisation or any of your partner organisations has:
+  In the last 3 years, has your organisation (or a parent or partner organisation) violated your obilgations according to <a href="http://www.legislation.gov.uk/uksi/2015/102/part/2/chapter/2/crossheading/conduct-of-the-procedure-choice-of-participants-and-award-of-contracts/made" target="_blank" rel="noopener noreferrer">Regulation 56(2) of the Public Contracts Regulations 2015 (link opens in a new tab)</a> in any of these areas:
 
-    - violated EU obligations referred to in <a href="http://www.legislation.gov.uk/uksi/2015/102/part/2/chapter/2/crossheading/conduct-of-the-procedure-choice-of-participants-and-award-of-contracts/made" target="_blank" rel="noopener noreferrer">Regulation 56(2) of the Public Contracts Regulations 2015 (link opens in a new tab)</a> in the fields of environmental, social and labour law
+    - environmental law
+    - social law
+    - labour law
 
 hint:
   For example, if any finding of unlawful discrimination has been made against the organisation by an Employment Tribunal or Employment Appeal Tribunal.
