--- a/frameworks/digital-outcomes-and-specialists-4/questions/declaration/influencedContractingAuthority.yml
+++ b/frameworks/digital-outcomes-and-specialists-4/questions/declaration/influencedContractingAuthority.yml
@@ -1,8 +1,6 @@
 name: Influencing the contracting authority
 question: >
-  Please confirm whether, within the past 3 years, your organisation or any of your partner organisations has:
-
-    - unduly influenced the decision-making process of the contracting authority
+  In the last 3 years, has your organisation (or any partner organisation) unduly influenced the decision-making process of the contracting authority?
 type: boolean
 assessment:
   passIfIn:
