--- a/frameworks/digital-outcomes-and-specialists-4/questions/declaration/misleadingInformation.yml
+++ b/frameworks/digital-outcomes-and-specialists-4/questions/declaration/misleadingInformation.yml
@@ -1,8 +1,6 @@
 name: Providing misleading information
 question: >
-  Please confirm whether, within the past 3 years, your organisation or any of your partner organisations has:
-
-    - provided misleading information that may have an influence on decisions concerning framework exclusion, selection or award
+  In the last 3 years, has your organisation (or any partner organisation) provided misleading information that may have an influence on decisions concerning framework exclusion, selection or award?
 type: boolean
 assessment:
   passIfIn:
