Copy ModernSlavery section from G11

--- a/frameworks/digital-outcomes-and-specialists-4/manifests/declaration.yml
+++ b/frameworks/digital-outcomes-and-specialists-4/manifests/declaration.yml
@@ -182,3 +182,11 @@
     - primaryContactEmail
     - contactNameContractNotice
     - contactEmailContractNotice
+
+-
+  name: Modern slavery
+  slug: modern-slavery
+  editable: True
+  prefill: False
+  questions:
+    - multiqModernSlavery
