Roles added in DOS3 can be copied

--- a/frameworks/digital-outcomes-and-specialists-4/metadata/copy_services.yml
+++ b/frameworks/digital-outcomes-and-specialists-4/metadata/copy_services.yml
@@ -15,6 +15,15 @@ questions_to_copy:
   - contentDesignerPriceMax
   - contentDesignerPriceMin
   - dataProtocols
+  - dataArchitectLocations
+  - dataArchitectPriceMax
+  - dataArchitectPriceMin
+  - dataEngineerLocations
+  - dataEngineerPriceMax
+  - dataEngineerPriceMin
+  - dataScientistLocations
+  - dataScientistPriceMax
+  - dataScientistPriceMin
   - deliveryManagerLocations
   - deliveryManagerPriceMax
   - deliveryManagerPriceMin
