--- a/frameworks/digital-outcomes-and-specialists-4/manifests/declaration.yml
+++ b/frameworks/digital-outcomes-and-specialists-4/manifests/declaration.yml
@@ -163,7 +163,7 @@
   name: How you’ll deliver your services
   slug: how-youll-deliver-your-services
   editable: True
-  prefill: True
+  prefill: False
   description: |
     The Crown Commercial Service will use this information to manage your participation in Digital Outcomes and Specialists&nbsp;4.
   questions:
