--- a/frameworks/digital-outcomes-and-specialists-4/manifests/edit_submission.yml
+++ b/frameworks/digital-outcomes-and-specialists-4/manifests/edit_submission.yml
@@ -15,6 +15,7 @@
     - bespokeSystemInformation
     - dataProtocols
     - openStandardsPrinciples
+    - accessibleApplicationsOutcomes
 
 - name: User research participants essentials
   editable: True
