Add accessiblity regulation questions for Specialists

--- a/frameworks/digital-outcomes-and-specialists-4/questions/services/contentDesigner.yml
+++ b/frameworks/digital-outcomes-and-specialists-4/questions/services/contentDesigner.yml
@@ -10,6 +10,7 @@ any_of: specialist
 questions:
   - contentDesignerLocations
   - contentDesignerDayRate
+  - accessibleApplicationsSpecialists
 
 empty_message: You haven’t added a content designer
 
