--- a/frameworks/digital-outcomes-and-specialists-4/questions/services/qualityAssurance.yml
+++ b/frameworks/digital-outcomes-and-specialists-4/questions/services/qualityAssurance.yml
@@ -10,6 +10,7 @@ any_of: specialist
 questions:
   - qualityAssuranceLocations
   - qualityAssuranceDayRate
+  - accessibleApplicationsSpecialists
 
 empty_message: You haven’t added a quality assurance analyst
 
