--- a/frameworks/digital-outcomes-and-specialists-4/questions/services/technicalArchitect.yml
+++ b/frameworks/digital-outcomes-and-specialists-4/questions/services/technicalArchitect.yml
@@ -10,6 +10,7 @@ any_of: specialist
 questions:
   - technicalArchitectLocations
   - technicalArchitectDayRate
+  - accessibleApplicationsSpecialists
 
 empty_message: You haven’t added a technical architect
 
