--- a/frameworks/digital-outcomes-and-specialists-4/questions/services/webOperations.yml
+++ b/frameworks/digital-outcomes-and-specialists-4/questions/services/webOperations.yml
@@ -10,6 +10,7 @@ any_of: specialist
 questions:
   - webOperationsLocations
   - webOperationsDayRate
+  - accessibleApplicationsSpecialists
 
 empty_message: You haven’t added a web operations engineer
 
