--- a/frameworks/digital-outcomes-and-specialists-4/questions/services/developer.yml
+++ b/frameworks/digital-outcomes-and-specialists-4/questions/services/developer.yml
@@ -10,6 +10,7 @@ any_of: specialist
 questions:
   - developerLocations
   - developerDayRate
+  - accessibleApplicationsSpecialists
 
 empty_message: You haven’t added a developer
 
