--- a/frameworks/digital-outcomes-and-specialists-4/questions/services/accessibleApplicationsOutcomes.yml
+++ b/frameworks/digital-outcomes-and-specialists-4/questions/services/accessibleApplicationsOutcomes.yml
@@ -3,6 +3,8 @@ question: Will you design and build accessible applications that meet the 2018 a
 hint:
   Read guidance about how to meet the regulations and <a target="_blank" rel="noopener noreferrer" href="https://www.gov.uk/guidance/accessibility-requirements-for-public-sector-websites-and-apps">design and build accessible services</a>.
 type: boolean
+required_value: true
+
 depends:
   - "on": "lot"
     being:
