--- a/frameworks/digital-outcomes-and-specialists-4/questions/services/bespokeSystemInformation.yml
+++ b/frameworks/digital-outcomes-and-specialists-4/questions/services/bespokeSystemInformation.yml
@@ -1,6 +1,8 @@
 name: Share systems information
 question: Will you share bespoke system information from the service you’re working on, eg software performance data, to help the government continuously improve its services?
 type: boolean
+required_value: true
+
 depends:
   - "on": "lot"
     being:
