Update DOS4 homepage message

--- a/frameworks/digital-outcomes-and-specialists-4/messages/homepage-sidebar.yml
+++ b/frameworks/digital-outcomes-and-specialists-4/messages/homepage-sidebar.yml
@@ -2,7 +2,7 @@ coming:
   heading: 'Digital Outcomes and Specialists&nbsp;4 coming soon'
   messages:
     - 'Provide digital outcomes and specialists, and user research studios and participants.'
-    - 'You need an account to receive notifications about when you can apply.'
+    - 'You’ll need to create a supplier account to apply.'
 
 open:
   heading: 'Digital Outcomes and Specialists&nbsp;4 is open for applications'
