--- a/frameworks/digital-outcomes-and-specialists-4/questions/declaration/termsAndConditions.yml
+++ b/frameworks/digital-outcomes-and-specialists-4/questions/declaration/termsAndConditions.yml
@@ -1,6 +1,6 @@
 name: Terms and conditions
 question: >
-  Do you accept the terms and conditions in the <a href="/suppliers/frameworks/digital-outcomes-and-specialists-4" target="_blank" rel="noopener noreferrer">framework agreement and call-off contract documents (link opens in a new tab)</a>?
+  Do you accept the terms and conditions in the <a href="/suppliers/frameworks/digital-outcomes-and-specialists-4#legal-documents" target="_blank" rel="noopener noreferrer">framework agreement and call-off contract documents (link opens in a new tab)</a>?
 type: boolean
 assessment:
   passIfIn:
