--- a/frameworks/digital-outcomes-and-specialists-4/questions/declaration/termsOfParticipation.yml
+++ b/frameworks/digital-outcomes-and-specialists-4/questions/declaration/termsOfParticipation.yml
@@ -1,6 +1,6 @@
 name: Invitation to apply
 question: >
-  Do you agree to comply with the terms of the <a href="/suppliers/frameworks/digital-outcomes-and-specialists-4" target="_blank" rel="noopener noreferrer">Digital Outcomes and Specialists&nbsp;4 ‘invitation to apply’ (link opens in a new tab)</a>?
+  Do you agree to comply with the terms of the <a href="/suppliers/frameworks/digital-outcomes-and-specialists-4#legal-documents" target="_blank" rel="noopener noreferrer">Digital Outcomes and Specialists&nbsp;4 ‘invitation to apply’ (link opens in a new tab)</a>?
 type: boolean
 assessment:
   passIfIn:
