Replace G11 with DOS4

--- a/frameworks/digital-outcomes-and-specialists-4/questions/declaration/multiqModernSlavery.yml
+++ b/frameworks/digital-outcomes-and-specialists-4/questions/declaration/multiqModernSlavery.yml
@@ -1,6 +1,6 @@
 id: multiqModernSlavery
 name: Modern slavery
-question: You must meet the reporting requirements of section 54 of The Modern Slavery Act (2015) if your organisations has a turnover of £36 million or more a year. Otherwise you can’t submit services on G-Cloud 11.
+question: You must meet the reporting requirements of section 54 of The Modern Slavery Act (2015) if your organisations has a turnover of £36 million or more a year. Otherwise you can’t submit services on Digital Outcomes and Specialists 4.
 
 type: multiquestion
 questions:
