--- a/frameworks/digital-outcomes-and-specialists-4/questions/declaration/modernSlaveryStatementOptional.yml
+++ b/frameworks/digital-outcomes-and-specialists-4/questions/declaration/modernSlaveryStatementOptional.yml
@@ -1,6 +1,6 @@
 name: Modern slavery statement optional
 question: >
-  You don’t need to publish a slavery and human trafficking statement to meet the modern slavery requirements for G-Cloud 11.
+  You don’t need to publish a slavery and human trafficking statement to meet the modern slavery requirements for Digital Outcomes and Specialists 4.
 question_advice: >
   You can choose to upload a statement. Read the Home Office guidance for information about <a href="https://www.gov.uk/government/publications/transparency-in-supply-chains-a-practical-guide" target="_blank" rel="noopener noreferrer">how to write a statement and what information it must include (link opens in a new tab)</a>.
 hint: >
