--- a/frameworks/g-cloud-11/messages/urls.yml
+++ b/frameworks/g-cloud-11/messages/urls.yml
@@ -1,6 +1,6 @@
 framework_agreement_url: "https://www.gov.uk/government/publications/g-cloud-11-framework-agreement"
 
-framework_agreement_pdf_url: "https://www.gov.uk/government/uploads/system/uploads/attachment_data/file/717205/g-cloud_11_framework_agreement.pdf"
+framework_agreement_pdf_url: "https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/810459/g-cloud-11-framework-agreement.pdf"
 
 supplier_guide_url: "https://www.gov.uk/guidance/g-cloud-suppliers-guide#how-to-apply"
 
