Update error messages for DOS supplier questions and answers
Make the error message content more in line with GOV.UK Design System
guidance.

--- a/frameworks/digital-outcomes-and-specialists-4/questions/clarification_question/question.yml
+++ b/frameworks/digital-outcomes-and-specialists-4/questions/clarification_question/question.yml
@@ -13,6 +13,6 @@ type: textbox_large
 max_length_in_words: 100
 validations:
   - name: answer_required
-    message: You must enter a question.
+    message: Enter a supplier question.
   - name: under_100_words
-    message: Your question must be no more than 100 words.
+    message: Supplier question must be 100 words or fewer.
