--- a/frameworks/digital-outcomes-and-specialists-4/questions/clarification_question/answer.yml
+++ b/frameworks/digital-outcomes-and-specialists-4/questions/clarification_question/answer.yml
@@ -17,6 +17,6 @@ type: textbox_large
 max_length_in_words: 100
 validations:
   - name: answer_required
-    message: You must enter an answer.
+    message: Enter your answer.
   - name: under_100_words
-    message: Your answer must be no more than 100 words.
+    message: Your answer must be 100 words or fewer.
