--- a/frameworks/digital-outcomes-and-specialists-4/questions/briefs/backgroundInformation.yml
+++ b/frameworks/digital-outcomes-and-specialists-4/questions/briefs/backgroundInformation.yml
@@ -1,8 +1,8 @@
 name: Why the work is being done
 question: Why the work is being done
 question_advice: |
-  Describe the organisation or policy goal the work supports, eg how a new law changes the way users receive
-  government payments.
+  Describe the organisation or policy goal the work supports. For example: how
+  a new law changes the way users receive government payments.
 
   Include any important dates. You must say if you need the work to be done by a certain date.
   This will help suppliers understand any time constraints.
