--- a/frameworks/digital-outcomes-and-specialists-4/questions/briefs/niceToHaveRequirementsParticipants.yml
+++ b/frameworks/digital-outcomes-and-specialists-4/questions/briefs/niceToHaveRequirementsParticipants.yml
@@ -4,8 +4,9 @@ question: 'Nice-to-have skills and experience'
 question_advice: |
   If too many suppliers have all the essential skills and experience, use the nice-to-have skills and experience to exclude suppliers.
 
-  List the skills and experience you’d like the supplier to have,<br />
-  eg have experience recruiting participants with hernias.
+  List the skills and experience you’d like the supplier to have.
+
+  For example: have experience recruiting participants with hernias.
 
   **The supplier can:**
 
