--- a/frameworks/digital-outcomes-and-specialists-4/questions/briefs/questionAndAnswerSessionDetailsSpecialists.yml
+++ b/frameworks/digital-outcomes-and-specialists-4/questions/briefs/questionAndAnswerSessionDetailsSpecialists.yml
@@ -4,7 +4,7 @@ question: Question and answer session details
 question_advice: |
   If you run a question and answer session, you must include:
 
-  - the type of session you want to run, eg webinar, phone conference or meeting
+  - the type of session you want to run, such as webinar, phone conference or meeting
   - the date and time of your session
 
   **When to run a question and answer session**
