--- a/frameworks/digital-outcomes-and-specialists-4/questions/briefs/technicalCompetenceCriteriaOutcomes.yml
+++ b/frameworks/digital-outcomes-and-specialists-4/questions/briefs/technicalCompetenceCriteriaOutcomes.yml
@@ -11,7 +11,7 @@ question_advice: |
 
   ##Giving points for individual criteria (optional)
 
-  You can give points to individual criteria, eg ‘have experience designing services for users with low digital
+  You can give points to individual criteria, such as ‘have experience designing services for users with low digital
   literacy – 15 points’. If you choose to add points, you must do it for all individual criteria.
 
   Unless you have asked for several examples, you should not score a supplier higher or lower because they give more or
