--- a/frameworks/digital-outcomes-and-specialists-4/questions/briefs/culturalFitCriteriaSpecialists.yml
+++ b/frameworks/digital-outcomes-and-specialists-4/questions/briefs/culturalFitCriteriaSpecialists.yml
@@ -17,7 +17,7 @@ question_advice: |
   - about having agile skills – that’s technical competence
 
   ##Giving points for individual criteria (optional)
-  You can give points to individual criteria, eg ‘transparent and collaborative when making decisions – 15 points’. If you choose to add points, you must do it for all individual criteria.
+  You can give points to individual criteria, such as ‘transparent and collaborative when making decisions – 15 points’. If you choose to add points, you must do it for all individual criteria.
 
   Read [how to score individual criteria](https://www.gov.uk/guidance/how-to-set-your-evaluation-criteria-when-buying-digital-outcomes-and-specialists-services#giving-points-to-individual-criteria)
 
