--- a/frameworks/digital-outcomes-and-specialists-4/questions/briefs/essentialRequirementsParticipants.yml
+++ b/frameworks/digital-outcomes-and-specialists-4/questions/briefs/essentialRequirementsParticipants.yml
@@ -4,8 +4,9 @@ question: 'Essential skills and experience'
 question_advice: |
   Suppliers who don’t have all the essential skills you list here will be automatically notified that their application was unsuccessful.
 
-  List all the specific skills or experience the supplier must have,<br />
-  eg have experience recruiting participants with low digital literacy.
+  List all the specific skills or experience the supplier must have.
+
+  For example: have experience recruiting participants with low digital literacy.
 
   **The supplier must:**
 
