--- a/frameworks/digital-outcomes-and-specialists-4/questions/briefs/evaluationTypeOutcomes.yml
+++ b/frameworks/digital-outcomes-and-specialists-4/questions/briefs/evaluationTypeOutcomes.yml
@@ -6,7 +6,7 @@ question_advice: |
 
   Choose additional ways to assess suppliers.
 
-  You can only use the methods you choose here, eg if you don’t select a case study now, you won’t be able to ask for one later.
+  You can only use the methods you choose here, so if you don’t select a case study now, you won’t be able to ask for one later.
 
   Read about [assessment methods](https://www.gov.uk/guidance/ways-to-assess-digital-outcomes-and-specialists-suppliers).
 type: checkboxes
@@ -24,11 +24,11 @@ options:
   - label: "Reference"
     description: >
        A written reference is a good way of confirming whether a supplier has done the work they’ve said they’ve done.
-       You should always ask for references that relate to a specific timeframe, eg work they’ve done in the last
+       You should always ask for references that relate to a specific timeframe, such as work they’ve done in the last
        2 years.
   - label: "Presentation"
     description: >
-       A presentation can help you understand a supplier’s approach to delivering an outcome, eg a practical
+       A presentation can help you understand a supplier’s approach to delivering an outcome, such as a practical
        demonstration of a prototype or discovery kick-off meeting.
 depends:
   - "on": "lot"
