--- a/frameworks/digital-outcomes-and-specialists-4/questions/briefs/evaluationTypeParticipants.yml
+++ b/frameworks/digital-outcomes-and-specialists-4/questions/briefs/evaluationTypeParticipants.yml
@@ -6,7 +6,7 @@ question_advice: |
 
   Choose additional ways to assess suppliers.
 
-  You can only use the methods you choose here, eg if you don’t select a reference now, you won’t be able to ask for one later.
+  You can only use the methods you choose here, so if you don’t select a reference now, you won’t be able to ask for one later.
 
   Read about [assessment methods](https://www.gov.uk/guidance/ways-to-assess-digital-outcomes-and-specialists-suppliers).
 type: checkboxes
@@ -20,7 +20,7 @@ options:
   - label: "Reference"
     description: >
        A written reference is a good way of confirming whether a supplier has done the work they’ve said they’ve done.
-       You should always ask for references that relate to a specific timeframe, eg work they’ve done in the last
+       You should always ask for references that relate to a specific timeframe, such as work they’ve done in the last
        2 years.
   - label: "Interview"
     description: >
