--- a/frameworks/digital-outcomes-and-specialists-4/questions/briefs/existingTeamOutcomes.yml
+++ b/frameworks/digital-outcomes-and-specialists-4/questions/briefs/existingTeamOutcomes.yml
@@ -2,9 +2,9 @@ name: Existing team
 id: existingTeam
 question: Existing team
 question_advice: |
-  Describe the team the supplier will be working with,
+  Describe the team the supplier will be working with.
 
-  eg whether the team will be working with another supplier.
+  For example: whether the team will be working with another supplier.
 type: textbox_large
 max_length_in_words: 100
 depends:
