--- a/frameworks/digital-outcomes-and-specialists-4/questions/briefs/existingTeamSpecialists.yml
+++ b/frameworks/digital-outcomes-and-specialists-4/questions/briefs/existingTeamSpecialists.yml
@@ -4,7 +4,7 @@ question: Who the specialist will work with
 question_advice: |
   Describe the team the specialist will be working with on this project.
 
-  eg you’ll be working with a user researcher and a designer
+  For example: You’ll be working with a user researcher and a designer
 type: textbox_large
 max_length_in_words: 100
 depends:
