--- a/frameworks/digital-outcomes-and-specialists-4/questions/briefs/locationParticipants.yml
+++ b/frameworks/digital-outcomes-and-specialists-4/questions/briefs/locationParticipants.yml
@@ -2,7 +2,7 @@ name: Location
 question: Where the research will take place
 id: location
 question_advice: |
-  This should be the primary location where they’ll be working.
+  Select the primary location where they’ll be working.
 
   Suppliers have said where they can recruit participants.
 
