--- a/frameworks/digital-outcomes-and-specialists-4/questions/briefs/niceToHaveRequirementsOutcomes.yml
+++ b/frameworks/digital-outcomes-and-specialists-4/questions/briefs/niceToHaveRequirementsOutcomes.yml
@@ -4,8 +4,8 @@ question: 'Nice-to-have skills and experience'
 question_advice: |
   If too many suppliers have all the essential skills and experience, use the nice-to-have skills and experience to exclude suppliers.
 
-  List the skills and experience you’d like the supplier to have,<br />
-  eg provide evidence of delivering at scale.
+  List the skills and experience you’d like the supplier to have.
+  For example: provide evidence of delivering at scale.
 
   **The supplier can:**
 
