--- a/frameworks/digital-outcomes-and-specialists-4/questions/briefs/niceToHaveRequirementsSpecialists.yml
+++ b/frameworks/digital-outcomes-and-specialists-4/questions/briefs/niceToHaveRequirementsSpecialists.yml
@@ -4,8 +4,8 @@ question: 'Nice-to-have skills and experience'
 question_advice: |
   If too many specialists have all the essential skills and experience, use the nice-to-have skills and experience to exclude specialists.
 
-  List the skills and experience you’d like the specialist to have,<br />
-  eg provide evidence of delivering at scale.
+  List the skills and experience you’d like the specialist to have.
+  For example: provide evidence of delivering at scale.
 
   **The specialist can:**
 
