--- a/frameworks/digital-outcomes-and-specialists-4/questions/briefs/outcome.yml
+++ b/frameworks/digital-outcomes-and-specialists-4/questions/briefs/outcome.yml
@@ -1,6 +1,7 @@
 name: Problem to be solved
 question: Problem to be solved
-question_advice: eg patients can’t access their medical records
+question_advice: >
+  For example: patients can’t access their medical records
 type: textbox_large
 max_length_in_words: 200
 depends:
