--- a/frameworks/digital-outcomes-and-specialists-4/questions/briefs/questionAndAnswerSessionDetailsOutcomesParticipants.yml
+++ b/frameworks/digital-outcomes-and-specialists-4/questions/briefs/questionAndAnswerSessionDetailsOutcomesParticipants.yml
@@ -5,7 +5,7 @@ question_advice: |
 
   You must give details of what type of session you want to hold, when it is and any details the attendees need.
 
-  - the type of session you want to run, eg webinar, phone conference or meeting
+  - the type of session you want to run, such as webinar, phone conference or meeting
   - the date and time of the session (this should happen within 1 week of publishing your requirements)
 
   Depending on the type of session you choose, you could also include:
