--- a/frameworks/digital-outcomes-and-specialists-4/questions/briefs/technicalCompetenceCriteriaParticipants.yml
+++ b/frameworks/digital-outcomes-and-specialists-4/questions/briefs/technicalCompetenceCriteriaParticipants.yml
@@ -10,7 +10,7 @@ question_advice: |
   - proposal
 
   ##Giving points for individual criteria (optional)
-  You can give points to individual criteria, eg ‘have experience recruiting participants with low digital literacy – 15 points’.
+  You can give points to individual criteria, for example: ‘have experience recruiting participants with low digital literacy – 15 points’.
 
   Unless you have asked for several examples, you should not score a supplier higher or lower because they give more or
   less examples than another supplier.
