--- a/frameworks/digital-outcomes-and-specialists-4/questions/briefs/technicalCompetenceCriteriaSpecialists.yml
+++ b/frameworks/digital-outcomes-and-specialists-4/questions/briefs/technicalCompetenceCriteriaSpecialists.yml
@@ -9,7 +9,7 @@ question_advice: |
   - nice-to-have skills and experience
 
   ##Giving points for individual criteria (optional)
-  You can give points to individual criteria, eg ‘have experience designing services for users with low digital literacy – 15 points’. If you choose to add points, you must do it for all individual criteria.
+  You can give points to individual criteria, for example: ‘have experience designing services for users with low digital literacy – 15 points’. If you choose to add points, you must do it for all individual criteria.
 
   Unless you have asked for several examples, you should not score a supplier higher or lower because they give more or
   less examples than another supplier.
