Change bullet lists to start with lowercase letter in DOS4 briefs content

--- a/frameworks/digital-outcomes-and-specialists-4/questions/briefs/successCriteriaParticipants.yml
+++ b/frameworks/digital-outcomes-and-specialists-4/questions/briefs/successCriteriaParticipants.yml
@@ -6,10 +6,10 @@ question_advice: |
 
   Suggested criteria
 
-  - Approach to recruiting specialist participants
-  - Estimated timeframes for the work
-  - Breakdown of recruitment costs and incentives
-  - How they’ve identified risks and dependencies and offered approaches to manage them
+  - approach to recruiting specialist participants
+  - estimated timeframes for the work
+  - breakdown of recruitment costs and incentives
+  - how they’ve identified risks and dependencies and offered approaches to manage them
 
 type: list
 number_of_items: 20
