--- a/frameworks/digital-outcomes-and-specialists-4/questions/briefs/culturalFitCriteriaOutcomes.yml
+++ b/frameworks/digital-outcomes-and-specialists-4/questions/briefs/culturalFitCriteriaOutcomes.yml
@@ -27,14 +27,14 @@ question_advice: |
 
   ##Suggested criteria
 
-  - Work as a team with our organisation and other suppliers
-  - Be transparent and collaborative when making decisions
-  - Have a no-blame culture and encourage people to learn from their mistakes
-  - Take responsibility for their work
-  - Share knowledge and experience with other team members
-  - Challenge the status quo
-  - Be comfortable standing up for their discipline
-  - Can work with clients with low technical expertise
+  - work as a team with our organisation and other suppliers
+  - be transparent and collaborative when making decisions
+  - have a no-blame culture and encourage people to learn from their mistakes
+  - take responsibility for their work
+  - share knowledge and experience with other team members
+  - challenge the status quo
+  - be comfortable standing up for their discipline
+  - can work with clients with low technical expertise
 
 
   **The supplier should:**
