--- a/frameworks/digital-outcomes-and-specialists-4/questions/briefs/participantSpecification.yml
+++ b/frameworks/digital-outcomes-and-specialists-4/questions/briefs/participantSpecification.yml
@@ -5,11 +5,11 @@ question_advice: |
 
   Say if they must:
 
-   - be from a particular demographic, eg women under 30 years of age
-   - be from a specific target user group, eg small business owners
-   - have experience of a particular situation, eg users who have recently moved home
-   - have a specific level of digital skills or use of digital technology, eg users who have basic online skills
-   - meet specific research requirements, eg must not have participated in user research in the last 3 months or must be prepared to be recorded or filmed
+   - be from a particular demographic, such as women under 30 years of age
+   - be from a specific target user group, such as small business owners
+   - have experience of a particular situation, such as users who have recently moved home
+   - have a specific level of digital skills or use of digital technology, such as users who have basic online skills
+   - meet specific research requirements, such as must not have participated in user research in the last 3 months or must be prepared to be recorded or filmed
 
   Always try to recruit a representative sample of your users.
 type: textbox_large
