--- a/frameworks/digital-outcomes-and-specialists-4/questions/briefs/successCriteriaOutcomes.yml
+++ b/frameworks/digital-outcomes-and-specialists-4/questions/briefs/successCriteriaOutcomes.yml
@@ -6,14 +6,14 @@ question_advice: |
 
   Suggested criteria
 
-  - Technical solution
-  - Approach and methodology
-  - How the approach or solution meets user needs
-  - How the approach or solution meets your organisation’s policy or goal
-  - Estimated timeframes for the work
-  - How they’ve identified risks and dependencies and offered approaches to manage them
-  - Team structure
-  - Value for money
+  - technical solution
+  - approach and methodology
+  - how the approach or solution meets user needs
+  - how the approach or solution meets your organisation’s policy or goal
+  - estimated timeframes for the work
+  - how they’ve identified risks and dependencies and offered approaches to manage them
+  - team structure
+  - value for money
 
 type: list
 number_of_items: 20
