Tweak DOS4 brief questions

--- a/frameworks/digital-outcomes-and-specialists-4/questions/briefs/budgetRangeSpecialists.yml
+++ b/frameworks/digital-outcomes-and-specialists-4/questions/briefs/budgetRangeSpecialists.yml
@@ -2,7 +2,7 @@ name: Maximum day rate
 id: budgetRange
 question: Maximum day rate
 question_advice: |
-  How much can you afford to spend per day.
+  How much can you afford to spend a day.
 
   You must have budget approval before you publish your requirements.
 
