--- a/frameworks/digital-outcomes-and-specialists-4/questions/briefs/participantsPerRound.yml
+++ b/frameworks/digital-outcomes-and-specialists-4/questions/briefs/participantsPerRound.yml
@@ -1,5 +1,5 @@
-name: Number of participants per round
-question: Number of participants per round
+name: Number of participants a round
+question: Number of participants a round
 question_advice: |
   Include details of any spare participants in each round.
 
