--- a/frameworks/digital-outcomes-and-specialists-4/questions/briefs/numberOfSuppliersSpecialists.yml
+++ b/frameworks/digital-outcomes-and-specialists-4/questions/briefs/numberOfSuppliersSpecialists.yml
@@ -2,7 +2,7 @@ name: How many specialists to evaluate
 id: numberOfSuppliers
 question: How many specialists to evaluate
 question_advice: |
-  You must evaluate at least 3 specialists.
+  Enter how many specialists you will evaluate. You must evaluate at least 3.
 
   Read about [how many specialists to evaluate](https://www.gov.uk/guidance/how-to-shortlist-digital-outcomes-and-specialists-suppliers#how-many-suppliers-to-evaluate).
 
