Update DOS 5 suitability questions
Following CCS requests and the accessibility review.

--- a/frameworks/digital-outcomes-and-specialists-5/manifests/declaration.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/manifests/declaration.yml
@@ -6,7 +6,7 @@
   description: |
     You must answer these questions to confirm that your services are suitable for Digital Outcomes and Specialists&nbsp;5.
 
-    You must be able to truthfully answer ‘yes’ to every question for your application to be considered eligible.
+    You must truthfully answer ‘yes’ to every question for your application to be considered eligible.
     The Crown Commercial Service may ask for proof after you’ve submitted your application.
 
     If you can’t answer ‘yes’ to every question in this section, it’s very unlikely that your application will be accepted.
