--- a/frameworks/digital-outcomes-and-specialists-5/questions/declaration/offerServicesYourselves.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/questions/declaration/offerServicesYourselves.yml
@@ -1,5 +1,7 @@
 name: What your team will deliver
-question: Please confirm that you or your team will deliver the services you’re offering on the framework yourselves, and that your organisation does not solely source staff for others.
+question: >
+  Will you or your organisation deliver the services you offer directly yourselves and not solely source staff for
+  others?
 type: boolean
 assessment:
   passIfIn:
