--- a/frameworks/digital-outcomes-and-specialists-5/questions/declaration/unfairCompetition.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/questions/declaration/unfairCompetition.yml
@@ -1,12 +1,12 @@
 name: No unfair access to information
 question: >
-  Has any party involved in the application done any of the following:
+  Can you confirm that all parties involved in the application have behaved responsibly and have:
 
-    - colluded to set prices with other suppliers or buyers
-    - entered into any arrangement with another person so that person refrains from submitting an application
-    - given access to information relating to the application to another person, or offered or given payment to another person in exchange for information
-    - given inducement or valuable consideration to another person (except where such communication takes place with people who are also participants in the application, or where disclosure is made in confidence to obtain necessary information or security for the application)
-    - canvassed, or attempted to buy information from, any government agent about this procurement
+    - not colluded to set prices with other suppliers or buyers
+    - not entered into any arrangement with another person so that person refrains from submitting an application
+    - not given access to information relating to the application to another person, or offered or given payment to another person in exchange for information
+    - not given inducement or valuable consideration to another person (except where such communication takes place with people who are also participants in the application, or where disclosure is made in confidence to obtain necessary information or security for the application)
+    - not canvassed, or attempted to buy information from, any government agent about this procurement
 
 type: boolean
 assessment:
