--- a/frameworks/digital-outcomes-and-specialists-5/questions/declaration/fraudAndTheft.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/questions/declaration/fraudAndTheft.yml
@@ -1,8 +1,8 @@
 name: Fraud convictions
 question: >
-  In the last 5 years, has anyone anyone who represents, supervises or has control in your organisation (or a partner or parent organisation) been convicted of any offence that relates to fraud affecting the European Communities’ financial interests as defined by article 1 of the Convention on the Protection of the Financial Interests of the European Communities, including:
+  In the last 5 years, has anyone who represents, supervises or has control in your organisation (or a partner or parent organisation) been convicted of any offence that relates to fraud affecting the European Communities’ financial interests as defined by article 1 of the Convention on the Protection of the Financial Interests of the European Communities, including:
 
-    - the common law offence of cheating the Revenue (HMRC)
+    - the common law offence of cheating the Revenue (HM Revenue and Customs)
     - the common law offence of conspiracy to defraud
     - fraud or theft within the meaning of the Theft Act 1968, the Theft Act (Northern Ireland) 1969, the Theft Act 1978 or the Theft (Northern Ireland) Order 1978
     - fraudulent trading within the meaning of section 458 of the Companies Act 1985, article 451 of the Companies (Northern Ireland) Order 1986 or section 993 of the Companies Act 2006
