--- a/frameworks/digital-outcomes-and-specialists-5/questions/declaration/organisedCrime.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/questions/declaration/organisedCrime.yml
@@ -7,8 +7,10 @@ question: >
     - an offence under section 4 of the Asylum and Immigration (Treatment of Claimants etc) Act 2004
     - an offence under section 59A of the Sexual Offences Act 2003
     - an offence under section 71 of the Coroners and Justice Act 2009
-    - an offence in connection with the proceeds of drug trafficking within the meaning of section 49, 50 or 51 of the Drug Trafficking Act 1994; or any other offence within the meaning of article 57(1) of the Directive
+    - an offence in connection with the proceeds of drug trafficking within the meaning of section 49, 50 or 51 of the Drug Trafficking Act 1994
     - an offence under section 2 or section 4 of the Modern Slavery Act 2015
+    - any other offence within the meaning of Article 57(1) of the Public Contracts Directive as defined by the law of any jurisdiction outside England, Wales and Northern Ireland
+    - any other offence within the meaning of Article 57(1) of the Public Contracts Directive created after 26 February 2015 in England, Wales or Northern Ireland
 type: boolean
 hint: Answer ‘yes’ if anyone who represents, supervises or has control in your organisation or a partner or parent organisation has been convicted of any of the above.
 assessment:
